--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 unbind C-b
-set-option -g prefix  C-s
+set-option -g prefix  C-a
 # tmux splitting 
 unbind % # Remove default binding since we’re replacing it with | and -
 # split vertical
@@ -8,34 +8,19 @@ bind | split-window -h
 bind - split-window -v
 # exporting default clipboard
 bind < run-shell -b "tmux save-buffer - | xclip -i -selection clipboard"
+set -s escape-time 0
+#set-option -g status-position top
+
+#Act like vim
+setw -g mode-keys vi
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # set the default shell 
 set-option -g default-shell /usr/bin/zsh
 
-set -g status-bg black
-set -g status-fg yellow
-
-# Automatically renumber windows
-set-option -g renumber-windows on
-setw -g clock-mode-colour yellow
-setw -g mode-keys vi
-
-
-set-option -g status on
-set-option -g status-interval 1
-set-option -g status-justify centre
-set-option -g status-keys vi
-set-option -g status-position bottom
-set-option -g status-style fg=colour136,bg=colour235
-set-option -g status-left-length 20
-set-option -g status-left-style default
-set-option -g status-left "#[fg=purple]#H #[fg=white]• #[fg=green,bright]#(pwd)#[default]"
-set-option -g status-right-length 140
-set-option -g status-right-style default
-set-option -g status-right "#[fg=green,bg=default,bright]#(tmux-mem-cpu-load) "
-set-option -ag status-right "#[fg=red,dim,bg=default]#(pw) "
-set-option -ag status-right " #[fg=white,bg=default]%a%l:%M:%S %p#[default] #[fg=blue]%Y-%m-%d"
-set-window-option -g window-status-style fg=colour244
-set-window-option -g window-status-style bg=default
-set-window-option -g window-status-current-style fg=colour166
-set-window-option -g window-status-current-style bg=default
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'catppuccin/tmux'
+run '~/.config/tmux/tpm/tpm'
