--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/.local/wallpapers/10.png
-wallpaper = ,~/.local/wallpapers/10.png
+preload = ~/.config/hypr/wallpapers/40.png
+wallpaper = ,~/.config/hypr/wallpapers/40.png
 
