add: walls // fix blurings // binaries

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,7 +16,6 @@ source=$XDG_CONFIG_HOME/hypr/mappings.conf
 # startup apps
 source=$XDG_CONFIG_HOME/hypr/startup.conf
 
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
     kb_variant =
@@ -38,36 +37,38 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 5
-    gaps_out = 20
+    gaps_in = 4
+    gaps_out = 16
     border_size = 0
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
-
     layout = dwindle
 }
-
 
 
 ########## window decorations and styling ##########
 
 decoration {
-    rounding = 2
-    blur = no
-    blur_size = 3
-    blur_passes = 1
-    blur_new_optimizations = false
-
+    rounding = 5
     drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+
+    blur {
+        enabled = false
+        new_optimizations = false
+    }
 }
+
+misc {
+    vfr = true
+}
+
 
 animations {
     enabled = no
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -93,9 +94,10 @@ device:epic-mouse-v1 {
     sensitivity = 1.2
 }
 
+
 debug {
     overlay=false
     damage_blink=false
-    disable_logs=false
+    disable_logs=true
 }
 
