--- a/hypr/mappings.conf
+++ b/hypr/mappings.conf
@@ -1,11 +1,11 @@
 $mainMod = SUPER
 $terMinal = alacritty
 
-
 # Apps specific bindings
 bind = $mainMod, RETURN, exec, $terMinal
 bind = $mainMod_Control_Shift, Q, exit,
 bind = $mainMod, D, exec, wofi --show drun
+bind = $mainMod_Shift, D, exec, wofi --show run
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
@@ -74,7 +74,8 @@ bind = $mainMod CTRL SHIFT, 0, movetoworkspacesilent, 10
 # scratchpads shit
 bind = $mainMod, Grave, exec, [workspace special:$terMinal] $terMinal 
 bind = $mainMod, o, togglespecialworkspace, $terMinal
-
+bind=SUPER_SHIFT,S,movetoworkspace,special
+bind=SUPER,S,togglespecialworkspace,
 
 
 # Scroll through existing workspaces with mainMod + scroll
