--- a/hypr/startup.conf
+++ b/hypr/startup.conf
@@ -5,3 +5,4 @@ exec-once = pipewire-pulse &
 exec-once = pipewire-media-session &
 exec-once = pipewire &
 exec-once = hyprpaper &
+exec-once = heliumbar &
