--- a/.config/hypr/mappings.conf
+++ b/.config/hypr/mappings.conf
@@ -1,11 +1,12 @@
 $mainMod = SUPER
 $terMinal = alacritty
+$launCher = wofi
 
 # Apps specific bindings
 bind = $mainMod, RETURN, exec, $terMinal
 bind = $mainMod_Control_Shift, Q, exit,
-bind = $mainMod, D, exec, wofi --show drun
-bind = $mainMod_Shift, D, exec, wofi --show run
+bind = $mainMod, D, exec, pkill $launCher -9 || $launCher --show drun
+bind = $mainMod_Shift, D, exec, pkill $launCher -9 || $launCher --show run
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
@@ -72,10 +73,11 @@ bind = $mainMod CTRL SHIFT, 0, movetoworkspacesilent, 10
 
 
 # scratchpads shit
-bind = $mainMod, Grave, exec, [workspace special:$terMinal] $terMinal 
-bind = $mainMod, o, togglespecialworkspace, $terMinal
-bind=SUPER_SHIFT,S,movetoworkspace,special
-bind=SUPER,S,togglespecialworkspace,
+#bind = $mainMod, Grave, exec, [workspace special:$terMinal] $terMinal 
+bindr = $mainMod, Grave, togglespecialworkspace, $terMinal
+bindr = $mainMod_Shift, Grave, exec, [workspace special:$terMinal] $terMinal
+# bindr = $mainMod, Grave, togglespecialworkspace
+# bindr = SUPER, Grave ,togglespecialworkspace, $terMinal 
 
 
 # Scroll through existing workspaces with mainMod + scroll
@@ -89,7 +91,6 @@ bindm = $mainMod , mouse:273, resizewindow
 # Touchpad shit not good so :)
 bindm = $mainMod, r, resizewindow
 
-
 # switch to last/previous workspace
 bind = $mainMod,TAB,workspace,previous
 
@@ -99,7 +100,3 @@ bind = , XF86MonBrightnessDown,  exec,  brillo -U 10
 bind = , XF86AudioLowerVolume,   exec,  pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute,          exec,  pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , XF86AudioRaiseVolume,   exec,  pactl set-sink-volume @DEFAULT_SINK@ +5%
-
-# Notification stuffs
-
-
