--- a/.config/hypr/startup.conf
+++ b/.config/hypr/startup.conf
@@ -6,3 +6,4 @@ exec-once = pipewire-media-session &
 exec-once = pipewire &
 exec-once = hyprpaper &
 exec-once = heliumbar &
+exec-once = brillo -S 2 &
