chore(maps): mappings to take screenshots selection|no-selection

--- a/.config/hypr/mappings.conf
+++ b/.config/hypr/mappings.conf
@@ -100,3 +100,6 @@ bind = , XF86MonBrightnessDown,  exec,  brillo -U 10
 bind = , XF86AudioLowerVolume,   exec,  pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute,          exec,  pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , XF86AudioRaiseVolume,   exec,  pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , Print,   exec,  bash ~/.config/hypr/scripts/screenshot no_selection
+bind =  SHIFT, Print,   exec,  bash ~/.config/hypr/scripts/screenshot selection
+
