chore(hypr): Donot start bar at startup instead bind it

--- a/.config/hypr/mappings.conf
+++ b/.config/hypr/mappings.conf
@@ -73,11 +73,9 @@ bind = $mainMod CTRL SHIFT, 0, movetoworkspacesilent, 10
 
 
 # scratchpads shit
-#bind = $mainMod, Grave, exec, [workspace special:$terMinal] $terMinal 
 bindr = $mainMod, Grave, togglespecialworkspace, $terMinal
 bindr = $mainMod_Shift, Grave, exec, [workspace special:$terMinal] $terMinal
-# bindr = $mainMod, Grave, togglespecialworkspace
-# bindr = SUPER, Grave ,togglespecialworkspace, $terMinal 
+
 
 
 # Scroll through existing workspaces with mainMod + scroll
@@ -102,4 +100,5 @@ bind = , XF86AudioMute,          exec,  pactl set-sink-mute @DEFAULT_SINK@ toggl
 bind = , XF86AudioRaiseVolume,   exec,  pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , Print,   exec,  bash ~/.config/hypr/scripts/screenshot no_selection
 bind =  SHIFT, Print,   exec,  bash ~/.config/hypr/scripts/screenshot selection
+bind =  $mainMod_Control_Shift, b, exec, pkill -9 heliumbar || setsid heliumbar 
 
