chore(maps): use sup+w for wofi

--- a/.config/hypr/mappings.conf
+++ b/.config/hypr/mappings.conf
@@ -5,8 +5,8 @@ $launCher = wofi
 # Apps specific bindings
 bind = $mainMod, RETURN, exec, $terMinal
 bind = $mainMod_Control_Shift, Q, exit,
-bind = $mainMod, D, exec, pkill $launCher -9 || $launCher --show drun
-bind = $mainMod_Shift, D, exec, pkill $launCher -9 || $launCher --show run
+bind = $mainMod, w, exec, pkill $launCher -9 || $launCher --show drun
+bind = $mainMod_Shift, w, exec, pkill $launCher -9 || $launCher --show run
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
@@ -33,7 +33,6 @@ binde = $mainMod CTRL, l, resizeactive, 10 0
 binde = $mainMod CTRL, h, resizeactive, -10 0
 binde = $mainMod CTRL, k, resizeactive, 0 -10
 binde = $mainMod CTRL, j, resizeactive, 0 10
-
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -77,7 +76,6 @@ bindr = $mainMod, Grave, togglespecialworkspace, $terMinal
 bindr = $mainMod_Shift, Grave, exec, [workspace special:$terMinal] $terMinal
 
 
-
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -101,4 +99,3 @@ bind = , XF86AudioRaiseVolume,   exec,  pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , Print,   exec,  bash ~/.config/hypr/scripts/screenshot no_selection
 bind =  SHIFT, Print,   exec,  bash ~/.config/hypr/scripts/screenshot selection
 bind =  $mainMod_Control_Shift, b, exec, pkill -9 heliumbar || setsid heliumbar 
-
