chore(prompt): show branches // disable battery

--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -1,43 +1,44 @@
 palette = "catppuccin_macchiato"
 
+format = """
+$directory \
+$character\
+"""
+
+right_format = """
+$battery  \
+$git_branch \
+"""
+
 [character]
-success_symbol = "[  ](maroon)"
-error_symbol = "[  ](red)"
-vimcmd_symbol = "[  ](green)"
+success_symbol = "[ ](maroon)"
+error_symbol = "[ ](red)"
+vimcmd_symbol = "[ ](green)"
 
 [directory]
-truncation_length = 4
-style = "bold lavender"
+truncation_length = 1
+style = "bold pink"
 
-format = """
-$username\
-$hostname\
-$directory\
-$git_branch\
-$git_state\
-$git_status\
-$cmd_duration\
-$line_break\
-$python\
-$character"""
+[battery]
+disabled = true
+full_symbol = "󱈑"
+charging_symbol = "󰂄"
+discharging_symbol = "󰂌"
+# ignore_percentage= ['83']
+unknown_symbol = "󰂑"
+format = "[$symbol]($style) $percentage"
 
+[[battery.display]]
+style = "italic mauve"
+threshold=100
 
-[git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
-style = "cyan"
-
-[git_state]
-format = '\([$state( $progress_current/$progress_total)]($style)\) '
-style = "bright-black"
-
-[cmd_duration]
-format = "[$duration]($style) "
-style = "yellow"
-
-[python]
-format = "[$virtualenv]($style) "
-style = "bright-black"
-
+[git_branch]
+symbol = '🌱 '
+truncation_length = 10
+truncation_symbol = ''
+ignore_branches = ['main']
+format = "[$branch]($style) "
+style = " rosewater"
 
 [palettes.catppuccin_macchiato]
 rosewater = "#f4dbd6"
