chore(prompt,window): remove comments // show git branch in prompt

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,20 +1,13 @@
- #  _    _                  _                 _ 
- # | |  | |                | |               | |
- # | |__| |_   _ _ __  _ __| | __ _ _ __   __| |
- # |  __  | | | | '_ \| '__| |/ _` | '_ \ / _` |
- # | |  | | |_| | |_) | |  | | (_| | | | | (_| |
- # |_|  |_|\__, | .__/|_|  |_|\__,_|_| |_|\__,_|
- #          __/ | |                             
- #         |___/|_|             @github.com/pwnwriter
- #
+# ┓       ┓     ┓
+# ┣┓┓┏┏┓┏┓┃┏┓┏┓┏┫
+# ┛┗┗┫┣┛┛ ┗┗┻┛┗┗┻
+#    ┛┛   @github.com/pwnwriter
+
+source=$XDG_CONFIG_HOME/hypr/mappings.conf
+source=$XDG_CONFIG_HOME/hypr/startup.conf
 
 monitor=,preferred,auto,auto
 env = XCURSOR_SIZE,24
-
-# Mapping shits
-source=$XDG_CONFIG_HOME/hypr/mappings.conf
-# startup apps
-source=$XDG_CONFIG_HOME/hypr/startup.conf
 
 input {
     kb_layout = us
@@ -31,12 +24,10 @@ input {
         natural_scroll = false
     }
 
-    sensitivity = 0.3 # -1.0 - 1.0, 0 means no modification.
+    sensitivity = 0.3 
 }
 
 general {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 4
     gaps_out = 16
     border_size = 0
@@ -44,9 +35,6 @@ general {
     col.inactive_border = rgba(595959aa)
     layout = dwindle
 }
-
-
-########## window decorations and styling ##########
 
 decoration {
     rounding = 5
@@ -81,8 +69,8 @@ animations {
 }
 
 dwindle {
-    pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # you probably want this
+    pseudotile = true 
+    preserve_split = true 
 }
 
 master {
@@ -96,7 +84,6 @@ gestures {
 device:epic-mouse-v1 {
     sensitivity = 1.2
 }
-
 
 debug {
     overlay=false
