--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,8 @@
+# ┓
+# ┣┓┓┏┏┓┏┓┏┓┏┓┏┓┏┓┏┓
+# ┛┗┗┫┣┛┛ ┣┛┗┻┣┛┗ ┛
+#    ┛┛   ┛   ┛ @github.com/pwnwriter
+ 
 preload = ~/.config/hypr/wallpapers/wall.png
 wallpaper = ,~/.config/hypr/wallpapers/wall.png
 
