--- a/.config/hypr/mappings.conf
+++ b/.config/hypr/mappings.conf
@@ -1,3 +1,7 @@
+# ┏┳┓┏┓┏┓┏┓┓┏┓┏┓┏
+# ┛┗┗┗┻┣┛┣┛┗┛┗┗┫┛
+#      ┛ ┛     ┛ @github.com/pwnwriter
+
 $mainMod = SUPER
 $terMinal = alacritty
 $launCher = wofi
@@ -20,7 +24,6 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
-# Cycle apps
 # Change focused window
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
@@ -97,6 +100,7 @@ bind = , XF86AudioLowerVolume,   exec,  pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , XF86AudioMute,          exec,  pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , XF86AudioRaiseVolume,   exec,  pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , Print,   exec,  bash ~/.config/hypr/scripts/screenshot no_selection
+
 bind =  SHIFT, Print,   exec,  bash ~/.config/hypr/scripts/screenshot selection
 bind =  $mainMod_Control_Shift, b, exec, pkill -9 heliumbar || setsid heliumbar 
 bind =  $mainMod_Control_Shift, x, exec, bash ~/.config/hypr/scripts/power
