--- a/.config/hypr/startup.conf
+++ b/.config/hypr/startup.conf
@@ -1,8 +1,7 @@
-exec-once = killall -9 pipewire 
-exec-once = killall -9 pipewire-pulse 
-exec-once = killall -9 pipewire-media-session
-exec-once = pipewire &
-exec-once = pipewire-pulse &
-exec-once = pipewire-media-session &
-exec-once = hyprpaper &
-exec-once = brillo -S 12 &
+# ┏┓
+# ┗┓╋┏┓┏┓╋┓┏┏┓
+# ┗┛┗┗┻┛ ┗┗┻┣┛
+#           @github.com/pwnwriter
+
+exec-once = killall -9 pipewire pipewire-pulse pipewire-media-session
+exec-once = pipewire & pipewire-pulse & pipewire-media-session & hyprpaper & brillo -S 12 &
