chore(shell): use dot dot aliasessss

--- a/.config/starship/starship.toml
+++ b/.config/starship/starship.toml
@@ -20,7 +20,7 @@ truncation_length = 1
 style = "bold pink"
 
 [battery]
-disabled = false
+disabled = true
 full_symbol = "󱈑"
 charging_symbol = "󰂄"
 discharging_symbol = "󰂌"
