feat(wall): wallpaper changer script using hyprpaper

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,7 +30,7 @@ input {
 general {
     gaps_in = 4
     gaps_out = 16
-    border_size = 0
+    border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     layout = dwindle
@@ -44,7 +44,7 @@ decoration {
     col.shadow = rgba(1a1a1aee)
 
     blur {
-        enabled = false
+        enabled = true
         new_optimizations = false
     }
 }
@@ -57,7 +57,7 @@ misc {
 
 
 animations {
-    enabled = 0
+    enabled = 1
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
