--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -2,7 +2,9 @@
 # ┣┓┓┏┏┓┏┓┏┓┏┓┏┓┏┓┏┓
 # ┛┗┗┫┣┛┛ ┣┛┗┻┣┛┗ ┛
 #    ┛┛   ┛   ┛ @github.com/pwnwriter
+#
+
  
-preload = ~/.config/hypr/wallpapers/wall.png
-wallpaper = ,~/.config/hypr/wallpapers/wall.png
+preload = ~/pictures/spiderman.png
+wallpaper = ,~/pictures/spiderman.png
 
