--- a/.config/hypr/mappings.conf
+++ b/.config/hypr/mappings.conf
@@ -104,3 +104,5 @@ bind = , Print,   exec,  bash ~/.config/hypr/scripts/screenshot no_selection
 bind =  SHIFT, Print,   exec,  bash ~/.config/hypr/scripts/screenshot selection
 bind =  $mainMod_Control_Shift, b, exec, pkill -9 heliumbar || setsid heliumbar 
 bind =  $mainMod_Control_Shift, x, exec, bash ~/.config/hypr/scripts/power
+
+bind =  $mainMod, space, exec, bash ~/.config/hypr/scripts/wall
