--- a/.config/hypr/startup.conf
+++ b/.config/hypr/startup.conf
@@ -1,7 +1,7 @@
-# ┏┓
-# ┗┓╋┏┓┏┓╋┓┏┏┓
-# ┗┛┗┗┻┛ ┗┗┻┣┛
-#           @github.com/pwnwriter
-
-exec-once = killall -9 pipewire pipewire-pulse pipewire-media-session
-exec-once = pipewire & pipewire-pulse & pipewire-media-session & hyprpaper & brillo -S 12 &
+# ┓
+# ┣┓┓┏┏┓┏┓┏┓┏┓┏┓┏┓┏┓
+# ┛┗┗┫┣┛┛ ┣┛┗┻┣┛┗ ┛
+#    ┛┛   ┛   ┛ @github.com/pwnwriter
+ 
+preload = ~/.config/hypr/wallpapers/wall.png
+wallpaper = ,~/.config/hypr/wallpapers/wall.png
