chore(hypr): mappings // fix wall script

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -3,6 +3,6 @@
 # ┛┗┗┫┣┛┛ ┣┛┗┻┣┛┗ ┛
 #    ┛┛   ┛   ┛ @github.com/pwnwriter
  
-preload = ~/.config/hypr/wallpapers/wall.png
-wallpaper = ,~/.config/hypr/wallpapers/wall.png
+preload = /home/pwn/.config/hypr/wallpapers/spiderman.png
+wallpaper = ,/home/pwn/.config/hypr/wallpapers/spiderman.png
 
