--- a/.config/hypr/mappings.conf
+++ b/.config/hypr/mappings.conf
@@ -103,4 +103,7 @@ bind = , Print,   exec,  bash ~/.config/hypr/scripts/screenshot no_selection
 
 bind =  SHIFT, Print,   exec,  bash ~/.config/hypr/scripts/screenshot selection
 bind =  $mainMod_Control_Shift, b, exec, pkill -9 heliumbar || setsid heliumbar 
+bind =  $mainMod_Shift, b, exec,  brave 
 bind =  $mainMod_Control_Shift, x, exec, bash ~/.config/hypr/scripts/power
+
+bind =  $mainMod_Control_Shift, w, exec, bash ~/.config/hypr/scripts/wall
