feat(rules): set window rules for apps / utils

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,6 +5,7 @@
 
 source=$XDG_CONFIG_HOME/hypr/mappings.conf
 source=$XDG_CONFIG_HOME/hypr/startup.conf
+source=$XDG_CONFIG_HOME/hypr/rules.conf
 
 monitor=,preferred,auto,auto
 env = XCURSOR_SIZE,24
