chore(shell;wall): use macchaito theme for bat // new wallpapers

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -3,6 +3,6 @@
 # ┛┗┗┫┣┛┛ ┣┛┗┻┣┛┗ ┛
 #    ┛┛   ┛   ┛ @github.com/pwnwriter
  
-preload = /home/pwn/.config/hypr/wallpapers/spiderman.png
-wallpaper = ,/home/pwn/.config/hypr/wallpapers/spiderman.png
+preload = /home/pwn/.config/hypr/wallpapers/nature-1.1.png
+wallpaper = ,/home/pwn/.config/hypr/wallpapers/nature-1.1.png
 
