--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -3,6 +3,6 @@
 # ┛┗┗┫┣┛┛ ┣┛┗┻┣┛┗ ┛
 #    ┛┛   ┛   ┛ @github.com/pwnwriter
  
-preload = /home/pwn/.config/hypr/wallpapers/nature-1.1.png
-wallpaper = ,/home/pwn/.config/hypr/wallpapers/nature-1.1.png
+preload = /home/pwn/.config/hypr/wallpapers/nature-1.png
+wallpaper = ,/home/pwn/.config/hypr/wallpapers/nature-1.png
 
