chore: use variables to store bar info

--- a/.config/hypr/mappings.conf
+++ b/.config/hypr/mappings.conf
@@ -5,6 +5,7 @@
 $mainMod = SUPER
 $terMinal = alacritty
 $launCher = wofi
+$bar = heliumbar
 
 # Apps specific bindings
 bind = $mainMod, RETURN, exec, $terMinal
@@ -102,7 +103,7 @@ bind = , XF86AudioRaiseVolume,   exec,  pactl set-sink-volume @DEFAULT_SINK@ +5%
 bind = , Print,   exec,  bash ~/.config/hypr/scripts/screenshot no_selection
 
 bind =  SHIFT, Print,   exec,  bash ~/.config/hypr/scripts/screenshot selection
-bind =  $mainMod_Control_Shift, b, exec, pkill -9 heliumbar || setsid heliumbar 
+bind =  $mainMod_Control_Shift, b, exec, pkill -9 $bar || setsid $bar 
 bind =  $mainMod_Shift, b, exec,  brave 
 bind =  $mainMod_Control_Shift, x, exec, bash ~/.config/hypr/scripts/power
 
