chore(tmux,bind): split;create panes following current dir

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,15 +18,17 @@ set -g status-style 'bg=default' # transparent
 set -g window-status-current-format ' 󰯉  #[fg=magenta]#W'
 set -g window-status-format '  #[fg=gray]#W'
 
+bind c new-window -c "#{pane_current_path}"
+
 set-window-option -g mode-keys vi
 unbind C-b
 bind-key C-a send-prefix
 
 unbind %
-bind | split-window -h
+bind | split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 unbind r 
 bind r source-file ~/.config/tmux/tmux.conf
