chore(tmux): focus on events; removed nsxiv key-handelers

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -14,6 +14,7 @@ set -ga status-right " #[fg=white,nobold]"
 set -g status-left-length 200    # increase length (from 10)
 set -g status-left ''           # blank
 set -g status-style 'bg=default' # transparent
+set-option -g focus-events on
 
 set -g window-status-current-format ' 󰯉  #[fg=magenta]#W'
 set -g window-status-format '  #[fg=gray]#W'
