chore(tmux): display msg on reload, prefix; use meta for switching window

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,7 @@
- ## github.com/pwnwriter/chadrice 
- ## MIT LICENSE
+# ┏┳┓       
+#  ┃ ┏┳┓┓┏┓┏
+#  ┻ ┛┗┗┗┻┛┗
+#          @pwnwriter/chadrice 
 
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
@@ -8,8 +10,11 @@ set -g escape-time 0
 set -g set-clipboard on 
 set -g mouse on
 set -g prefix C-a
+set -g history-limit 1000000
 
-set -g status-right "#[fg=blue,bold]#S"
+wg_prfx=" #[fg=colour231,bg=default]#{?client_prefix,,}"  # prefix indicator widget
+
+set -g status-right "${wg_prfx}   #[fg=blue,bold]#S"
 set -ga status-right " #[fg=white,nobold]"
 set -g status-left-length 200    # increase length (from 10)
 set -g status-left ''           # blank
@@ -19,9 +24,13 @@ set-option -g focus-events on
 set -g window-status-current-format ' 󰯉  #[fg=magenta]#W'
 set -g window-status-format '  #[fg=gray]#W'
 
-bind c new-window -c "#{pane_current_path}"
+# start index from 1
+set -g base-index 1
+set -g pane-base-index 1
 
 set-window-option -g mode-keys vi
+
+bind c new-window -c "#{pane_current_path}"
 unbind C-b
 bind-key C-a send-prefix
 
@@ -32,15 +41,28 @@ unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
 unbind r 
-bind r source-file ~/.config/tmux/tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf ; display " 󰑓 Reloading config" 
 
+# Resize panes
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 bind -r H resize-pane -L 5
-bind -r m resize-pane -Z
+bind -r m resize-pane -Z 5
 
+# switching panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+# switching windows
+bind -n M-1 select-window -t 1
+bind -n M-2 select-window -t 2
+bind -n M-3 select-window -t 3
+bind -n M-4 select-window -t 4
+bind -n M-5 select-window -t 5
+bind -n M-6 select-window -t 6
+bind -n M-7 select-window -t 7
+bind -n M-8 select-window -t 8
+bind -n M-9 select-window -t 9
