chore(cdt): switch to tmux client, if exist already

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -41,7 +41,7 @@ unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
 unbind r 
-bind r source-file ~/.config/tmux/tmux.conf ; display " 󰑓 Reloading config" 
+bind r source-file ~/.config/tmux/tmux.conf && display " 󰑓 Reloading config" 
 
 # Resize panes
 bind -r J resize-pane -D 5
