feat(tmux,scratch): use tmux popup menus as scratchpads

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -41,7 +41,14 @@ unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
 unbind r 
-bind r source-file ~/.config/tmux/tmux.conf && display " 󰑓 Reloading config" 
+bind r source-file ~/.config/tmux/tmux.conf \; display-message "   Reloading config"
+
+## Small popup scratchpad
+bind-key -n M-u if-shell -F '#{==:#{session_name},pad}' {
+detach-client
+  } {
+      display-popup -E "tmux new-session -A -s pad"
+  }
 
 # Resize panes
 bind -r J resize-pane -D 5
