--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -64,12 +64,12 @@ bind k select-pane -U
 bind l select-pane -R
 
 # switching windows
-bind -n M-1 select-window -t 1
-bind -n M-2 select-window -t 2
-bind -n M-3 select-window -t 3
-bind -n M-4 select-window -t 4
-bind -n M-5 select-window -t 5
-bind -n M-6 select-window -t 6
-bind -n M-7 select-window -t 7
-bind -n M-8 select-window -t 8
-bind -n M-9 select-window -t 9
+bind -n M-1 run-shell 'tmux switch-client -t :1 || tmux new-window -n "Window 1" -t :1'
+bind -n M-2 run-shell 'tmux switch-client -t :2 || tmux new-window -n "Window 2" -t :2'
+bind -n M-3 run-shell 'tmux switch-client -t :3 || tmux new-window -n "Window 3" -t :3'
+bind -n M-4 run-shell 'tmux switch-client -t :4 || tmux new-window -n "Window 4" -t :4'
+bind -n M-5 run-shell 'tmux switch-client -t :5 || tmux new-window -n "Window 5" -t :5'
+bind -n M-6 run-shell 'tmux switch-client -t :6 || tmux new-window -n "Window 6" -t :6'
+bind -n M-7 run-shell 'tmux switch-client -t :7 || tmux new-window -n "Window 7" -t :7'
+bind -n M-8 run-shell 'tmux switch-client -t :8 || tmux new-window -n "Window 8" -t :8'
+bind -n M-9 run-shell 'tmux switch-client -t :9 || tmux new-window -n "Window 9" -t :9'
