feat(tmux): switch to last window using alt+tab

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -63,6 +63,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Switch to the last used pane
+bind-key -n M-Tab last-window
+
 # switching windows
 bind -n M-1 run-shell 'tmux switch-client -t :1 || tmux new-window -n "Window 1" -t :1'
 bind -n M-2 run-shell 'tmux switch-client -t :2 || tmux new-window -n "Window 2" -t :2'
