chore(desc): fixed spell

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -63,7 +63,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# Switch to the last used pane
+# Switch to the last used window
 bind-key -n M-Tab last-window
 
 # switching windows
