chore(tmux): remove tmux statusline on popup

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -43,12 +43,13 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind r 
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "   Reloading config"
 
-## Small popup scratchpad
+# Small popup scratchpad
 bind-key -n M-u if-shell -F '#{==:#{session_name},pad}' {
-detach-client
-  } {
-      display-popup -E "tmux new-session -A -s pad"
-  }
+    set status off
+    detach-client
+} {
+    display-popup -E "tmux new-session -A -s pad"
+}
 
 # Resize panes
 bind -r J resize-pane -D 5
