feat(term): hide cursor when typing

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -51,5 +51,8 @@ decorations = "Full"
 general = "Alacritty"
 instance = "Alacritty"
 
+[mouse]
+hide_when_typing = true
+
 [env]
 TERM = "xterm-256color"
