--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -3,6 +3,6 @@
 # ┛┗┗┫┣┛┛ ┣┛┗┻┣┛┗ ┛
 #    ┛┛   ┛   ┛ @github.com/pwnwriter
  
-preload = /home/pwn/.config/hypr/wallpapers/catppuccin.png
-wallpaper = ,/home/pwn/.config/hypr/wallpapers/catppuccin.png
+preload = /home/pwn/.config/hypr/wallpapers/wallpaper-2.jpg
+wallpaper = ,/home/pwn/.config/hypr/wallpapers/wallpaper-2.jpg
 
