--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -43,6 +43,8 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind r 
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "   Reloading config"
 
+bind b set-option status\; refresh-client -S # Toggle tmux bar
+
 # Small popup scratchpad
 bind-key -n M-u if-shell -F '#{==:#{session_name},pad}' {
     set status off 
