chore(mapps): use t instead u to toggle pad

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -46,7 +46,7 @@ bind r source-file ~/.config/tmux/tmux.conf \; display-message "   Reloading 
 bind b set-option status\; refresh-client -S # Toggle tmux bar
 
 # Small popup scratchpad
-bind-key -n M-u if-shell -F '#{==:#{session_name},pad}' {
+bind-key -n M-t if-shell -F '#{==:#{session_name},pad}' {
     set status off 
     detach-client 
 } {
