chore(wal): look for wal as static file, instead of directly modifying it

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -3,6 +3,5 @@
 # ┛┗┗┫┣┛┛ ┣┛┗┻┣┛┗ ┛
 #    ┛┛   ┛   ┛ @github.com/pwnwriter
  
-preload = /home/pwn/.config/hypr/wallpapers/wallpaper-2.jpg
-wallpaper = ,/home/pwn/.config/hypr/wallpapers/wallpaper-2.jpg
-
+preload = /home/pwn/.config/hypr/wallpapers/current
+wallpaper = ,/home/pwn/.config/hypr/wallpapers/current
