--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule ".config/nvim"]
-	path = .config/nvim
+[submodule "config/nvim"]
+	path = config/nvim
 	url = git@github.com:pwnwriter/pwnvim
