--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "config/nvim"]
 	path = config/nvim
 	url = git@github.com:pwnwriter/pwnvim
+[submodule "local/share/pass"]
+	path = local/share/pass
+	url = git@github.com:pwnwriter/pass
