--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -30,6 +30,9 @@ set -g pane-base-index 1
 
 set-window-option -g mode-keys vi
 
+set -g pane-active-border-style "bg=default fg=#181926"
+set -g pane-border-style "bg=default fg=#181926"
+
 bind c new-window -c "#{pane_current_path}"
 unbind C-b
 bind-key C-a send-prefix
