--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -11,18 +11,13 @@ set -g set-clipboard on
 set -g mouse on
 set -g prefix C-a
 set -g history-limit 1000000
-
-wg_prfx=" #[fg=colour231,bg=default]#{?client_prefix,,}"  # prefix indicator widget
-
-set -g status-right "${wg_prfx}   #[fg=blue,bold]#S"
-set -ga status-right " #[fg=white,nobold]"
-set -g status-left-length 200    # increase length (from 10)
-set -g status-left ''           # blank
-set -g status-style 'bg=default' # transparent
+set -g status-left-length 200    # increawise length (from 10)
 set-option -g focus-events on
 
-set -g window-status-current-format ' 󰯉  #[fg=magenta]#W'
-set -g window-status-format '  #[fg=gray]#W'
+wg_prfx=" #[fg=#c6a0f6,bg=default]#{?client_prefix,,}"  # prefix indicator widget
+set -g status-right "${wg_prfx}  #[bold,fg=#f4dbd6]#S "
+set -g window-status-format '  #[fg=#6e738d]#W'
+set -g window-status-current-format '   #[fg=#f4dbd6]#W'
 
 # start index from 1
 set -g base-index 1
