--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -14,6 +14,8 @@ set -g history-limit 1000000
 set -g status-left-length 200    # increawise length (from 10)
 set-option -g focus-events on
 
+set -g status-left ''           # blank
+set -g status-style 'bg=default' #transparent
 wg_prfx=" #[fg=#c6a0f6,bg=default]#{?client_prefix,,}"  # prefix indicator widget
 set -g status-right "${wg_prfx}  #[bold,fg=#f4dbd6]#S "
 set -g window-status-format '  #[fg=#6e738d]#W'
