refactor(dirs): cleaning upp

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -38,7 +38,7 @@ general {
 }
 
 decoration {
-    rounding = 5
+    rounding = 7
     drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
@@ -54,6 +54,8 @@ misc {
     vfr = true
     disable_hyprland_logo = true
     disable_splash_rendering = true
+    enable_swallow = true
+    swallow_regex = ^(Alacritty|kitty|footclient)$
 }
 
 
