feat(tmux): enable `scrolling` using `prefix + s`

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -43,7 +43,11 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind r 
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "   Reloading config"
 
+unbind b 
 bind b set-option status\; refresh-client -S # Toggle tmux bar
+
+unbind s 
+bind s if-shell -F "#{?pane_in_mode,1,0}" "send-keys -X cancel; clear-pane" "copy-mode -e"
 
 # Small popup scratchpad
 bind-key -n M-t if-shell -F '#{==:#{session_name},pad}' {
