--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -47,7 +47,7 @@ unbind b
 bind b set-option status\; refresh-client -S # Toggle tmux bar
 
 unbind s 
-bind s if-shell -F "#{?pane_in_mode,1,0}" "send-keys -X cancel; clear-pane" "copy-mode -e"
+bind s if-shell -F "#{?pane_in_mode,1,0}" "send-keys -X cancel; clear-pane" "copy-mode -e" # Switch to scroll mode
 
 # Small popup scratchpad
 bind-key -n M-t if-shell -F '#{==:#{session_name},pad}' {
