feat(pkg,tmux): use simple nums for tmux windows; added new pkgs

--- a/home/configs/tmux/tmux.conf
+++ b/home/configs/tmux/tmux.conf
@@ -18,8 +18,8 @@ set -g status-left ''           # blank
 set -g status-style 'bg=default' #transparent
 wg_prfx=" #[fg=#c6a0f6,bg=default]#{?client_prefix,,}"  # prefix indicator widget
 set -g status-right "${wg_prfx}  #[bold,fg=#f4dbd6]#S "
-set -g window-status-format '  #[fg=#6e738d]#W'
-set -g window-status-current-format '   #[fg=#f4dbd6]#W'
+set -g window-status-format ' #[fg=#6e738d]#W'
+set -g window-status-current-format ' #[fg=#f4dbd6]#W'
 
 # start index from 1
 set -g base-index 1
