--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -36,6 +36,8 @@ general {
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
     layout = dwindle
+    resize_on_border = true
+    cursor_inactive_timeout = 5
 }
 
 decoration {
