chore(hypr): use`win+a`for alacritty

--- a/hypr/mappings.conf
+++ b/hypr/mappings.conf
@@ -8,7 +8,7 @@ $launCher = wofi
 $bar = heliumbar
 
 # Apps specific bindings
-bind = $mainMod, RETURN, exec, $terMinal
+bind = $mainMod, A, exec, $terMinal
 bind = $mainMod_Control_Shift, Q, exit,
 bind = $mainMod, w, exec, pkill $launCher -9 || $launCher --show drun
 bind = $mainMod_Shift, w, exec, pkill $launCher -9 || $launCher --show run
