chore(maps): use `mainmod+b` for `$browser`

--- a/hypr/mappings.conf
+++ b/hypr/mappings.conf
@@ -6,6 +6,7 @@ $mainMod = SUPER
 $terMinal = alacritty
 $launCher = wofi
 $bar = heliumbar
+$browSer = brave
 
 # Apps specific bindings
 bind = $mainMod, A, exec, $terMinal
@@ -104,7 +105,7 @@ bind = , Print,   exec,  bash ~/.config/hypr/scripts/screenshot no_selection
 
 bind =  SHIFT, Print,   exec,  bash ~/.config/hypr/scripts/screenshot selection
 bind =  $mainMod_Control_Shift, b, exec, pkill -9 $bar || setsid $bar 
-bind =  $mainMod_Shift, b, exec,  brave 
+bind =  $mainMod,       b, exec,  $browSer
 bind =  $mainMod_Control_Shift, x, exec, bash ~/.config/hypr/scripts/power
 
 bind =  $mainMod_Control_Shift, w, exec, bash ~/.config/hypr/scripts/wall
