--- a/modules/configs/tmux.conf
+++ b/modules/configs/tmux.conf
@@ -45,7 +45,7 @@ unbind s
 bind s if-shell -F "#{?pane_in_mode,1,0}" "send-keys -X cancel; clear-pane" "copy-mode -e" # Switch to scroll mode
 
 # Small popup scratchpad
-bind-key -n M-t if-shell -F '#{==:#{session_name},pad}' {
+bind-key -n M-p if-shell -F '#{==:#{session_name},pad}' {
     set status off 
     detach-client 
 } {
