chore(fetch): new config oO

--- a/modules/configs/fastfetch/config.jsonc
+++ b/modules/configs/fastfetch/config.jsonc
@@ -1,97 +1,97 @@
 {
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
-        "type": "iterm",
-        "source": "~/.config/fastfetch/nix.png",
+    	"source": "~/.config/fastfetch/nix.png",
+    	"type": "iterm",
+    	"padding": {
+    		"top": 3
+    	}
     },
     "display": {
-        "separator": " : "
+        "separator": " "
     },
     "modules": [
-        {
+	"break",
+        "break",
+        "break",
+	{
             "type": "custom",
-            "format": "\u001b[36m   サインウルフ "
+            "format": "\u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m"
         },
-        {
-            "type": "custom",
-            "format": "┌──────────────────────────────────────────┐"
+	"break",
+	{
+            "type": "title",
+            "keyWidth": 10
         },
+        "break",
         {
             "type": "os",
-            "key": "   OS",
-            "keyColor": "red"
+            "key": " ",
+            "keyColor": "34",
         },
         {
             "type": "kernel",
-            "key": "   Kernel",
-            "keyColor": "red"
+            "key": " ",
+            "keyColor": "34",
         },
         {
             "type": "packages",
-            "key": "   Packages",
-            "keyColor": "green"
+            "format": "{} (nix)",
+            "key": " ",
+            "keyColor": "34",  
         },
         {
-            "type": "display",
-            "key": " 󰖯 Display",
-            "keyColor": "green"
-        },
-        {
-            "type": "wm",
-            "key": "    WM",
-            "keyColor": "yellow"
+            "type": "shell",
+            "key": " ",
+            "keyColor": "34", 
         },
         {
             "type": "terminal",
-            "key": "   Terminal",
-            "keyColor": "yellow"
+            "key": " ",
+            "keyColor": "34", 
         },
         {
-            "type": "custom",
-            "format": "└──────────────────────────────────────────┘"
+            "type": "wm",
+            "key": " ",
+            "keyColor": "34", 
+        },
+        {
+            "type": "cursor",
+            "key": " ",
+            "keyColor": "34", 
+        },
+        {
+            "type": "terminalfont",
+            "key": " ",
+            "keyColor": "34", 
+        },
+        {
+            "type": "uptime",
+            "key": " ",
+            "keyColor": "34", 
+        },
+        {
+            "type": "datetime",
+            "format": "{1}-{3}-{11}",
+            "key": " ",
+            "keyColor": "34", 
+        },
+        {
+            "type": "media",
+            "key": "󰝚 ",
+            "keyColor": "34", 
+        },
+        {
+            "type": "player",
+            "key": " ",
+            "keyColor": "34", 
         },
         "break",
         {
-            "type": "title",
-            "key": "  "
-        },
-        {
             "type": "custom",
-            "format": "┌──────────────────────────────────────────┐"
-        },
-        {
-            "type": "cpu",
-            "format": "{1}",
-            "key": "   CPU",
-            "keyColor": "blue"
-        },
-        {
-            "type": "gpu",
-            "format": "{2}",
-            "key": "   GPU",
-            "keyColor": "blue"
-        },
-        {
-            "type": "gpu",
-            "format": "{3}",
-            "key": "   GPU Driver",
-            "keyColor": "magenta"
-        },
-        {
-            "type": "memory",
-            "key": "  󰍛 Memory",
-            "keyColor": "magenta"
-        },
-        {
-            "type": "custom",
-            "format": "└──────────────────────────────────────────┘"
+            "format": "\u001b[90m  \u001b[31m  \u001b[32m  \u001b[33m  \u001b[34m  \u001b[35m  \u001b[36m  \u001b[37m"
         },
         "break",
-        {
-            "type": "colors",
-            "paddingLeft": 2,
-            "symbol": "circle"
-        },
-        "break"
+        "break",
     ]
 }
