--- a/modules/configs/fastfetch/config.jsonc
+++ b/modules/configs/fastfetch/config.jsonc
@@ -2,7 +2,7 @@
     "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
     "logo": {
         "source": "~/.config/fastfetch/nix.png",
-        "type": "iterm",
+        "type": "kitty",
         "padding": {
             "top": 3
         }
